[gd_scene load_steps=10 format=3 uid="uid://b6u21cf67kg77"]

[ext_resource type="Script" path="res://scripts/mainMenu.gd" id="1_xat0s"]
[ext_resource type="Texture2D" uid="uid://rwjnsg21k0jh" path="res://textures/background.jpg" id="2_x4ev0"]
[ext_resource type="Texture2D" uid="uid://wxreo5f08w6s" path="res://textures/SpaceShooterAssetPack_IU.png" id="3_1sq0q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_opvfu"]
atlas = ExtResource("3_1sq0q")
region = Rect2(88, 28, 12, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_veor3"]
atlas = ExtResource("3_1sq0q")
region = Rect2(112, 28, 13, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_btv0k"]
atlas = ExtResource("3_1sq0q")
region = Rect2(100, 28, 12, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb41a"]
atlas = ExtResource("3_1sq0q")
region = Rect2(125, 0, 12, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_5avqh"]
atlas = ExtResource("3_1sq0q")
region = Rect2(149, 0, 13, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_lslo3"]
atlas = ExtResource("3_1sq0q")
region = Rect2(137, 0, 12, 13)

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xat0s")

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_x4ev0")

[node name="gameName" type="Label" parent="."]
layout_mode = 0
offset_left = 291.0
offset_top = 260.0
offset_right = 455.0
offset_bottom = 283.0
scale = Vector2(3, 3)
text = "INSERT NAME HERE :)"

[node name="exitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1010.0
offset_top = 8.0
offset_right = 1022.0
offset_bottom = 21.0
scale = Vector2(5, 5)
texture_normal = SubResource("AtlasTexture_opvfu")
texture_pressed = SubResource("AtlasTexture_veor3")
texture_hover = SubResource("AtlasTexture_btv0k")

[node name="playButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 507.0
offset_top = 378.0
offset_right = 519.0
offset_bottom = 391.0
scale = Vector2(10, 10)
texture_normal = SubResource("AtlasTexture_gb41a")
texture_pressed = SubResource("AtlasTexture_5avqh")
texture_hover = SubResource("AtlasTexture_lslo3")

[connection signal="button_down" from="exitButton" to="." method="_on_exit_button_button_down"]
[connection signal="button_down" from="playButton" to="." method="_on_play_button_button_down"]
